# Integration-Project-4-Backend

./: .gitlab-ci.yml  CmakeLists.txt  vcpkg.json
coverage/: Coverage_Verifier.py  coverage.xml  index.html
coverage/Modules/: client_test.html  tests.html
coverage/Modules/client_test/: Apolo6031.cpp.html  Ares.cpp.html  Ares7021.cpp.html  Ares7023.cpp.html  Ares7031.cpp.html  Ares8023.cpp.html  Ares8023_15.cpp.html  Ares8023_200.cpp.html  Catalog.cpp.html  Cronos.cpp.html  Cronos6001_A.cpp.html  Cronos6003.cpp.html  Cronos6021_A.cpp.html  Cronos6021_L.cpp.html  Cronos7023.cpp.html  Cronos7023_2_5.cpp.html  GlobalID.cpp.html  Meter.cpp.html  PhasesMeter.cpp.html  SinglePhaseMeter.cpp.html  ThreePhaseMeter.cpp.html  TwoPhaseMeter.cpp.html  Zeus.cpp.html  Zeus8021.cpp.html  Zeus8031.cpp.html  client.cpp.html
coverage/Modules/tests/: Apolo.cpp.html  Ares.cpp.html  Ares7021.cpp.html  Ares7023.cpp.html  Ares7031.cpp.html  Ares8023.cpp.html  Ares8023_15.cpp.html  Ares8023_200.cpp.html  Cronos.cpp.html  Cronos6001_A.cpp.html  Cronos6003.cpp.html  (+8 more)
include/client/: client.h
include/config/: config.h
include/core/: Catalog.h  CatalogControler.h
include/meters/: Meter.h
include/server/: interceptors.h  server.h
include/service/: meter_service.h
proto/: CmakeLists.txt  meter.proto
src/client/: client.cpp
src/core/: Branch protegidas.txt  Catalog.cpp  CatalogControler.cpp
src/meters/: Meter.cpp
src/server/: main.cpp  server.cpp
src/service/: meter_service.cpp
tests/: CMakeLists.txt
tests/src/: test_catalog.cpp  test_meter.cpp  test_phaseMeter.cpp
(+45 files in other folders)
